[B] Fix sizing/wrapping on project metadata
FIXES #133906677

--- a/client/src/theme/Components/shared/_section-heading.scss
+++ b/client/src/theme/Components/shared/_section-heading.scss
@@ -70,6 +70,7 @@
     }
 
     .manicon-tag {
+      margin-top: -0.028em;
       font-size: 1.385em;
     }
   }
